[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loghorz"
version = "0.0.1"
authors = [
    { name="Sydney Pasloski", email="sydney.pasloski@ucalgary.ca" },
]
description="goph420 lab01 toml"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["welly"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT",
]
[project.urls]
"Homepage" = "https://github.com/sydpas/rvgs_2025_loghorz_test"